[XUI-1419] Fix spacing in inline reversed input groups
Label margins were broken in inline reversed checkbox and radio groups.
Since they aren’t technically `XUICheckboxGroup`s or `XUIRadioGroup`s,
we didn’t have a lot of non-ugly ways to target them. We’ve opened
[XUI-1426](https://jira.teamxero.com/browse/XUI-1426) to rethink how we
handle these, which will include another look at styling. This is merely
a stopgap to fix the immediate breakage. Since I only caught this with
my eyeballs, I’ve added visual regression tests to catch this situation
in the future.

Speaking of which, this also includes an update to a vis-reg reference
image from one of our kitchen-sink tests. It doesn’t represent a
realistic use of the component, so a change in the vis-reg was
deemed acceptable.

--- a/src/sass/7-components/_forms.checkboxesradios.styled.scss
+++ b/src/sass/7-components/_forms.checkboxesradios.styled.scss
@@ -36,6 +36,10 @@
     @include xui-margin-vertical(2px);
   }
 
+  .#{$ns}-styledcheckboxradio-reversed .#{$ns}-styledcheckboxradio--label {
+    @include xui-margin-left(0);
+  }
+
   .#{$ns}-styledcheckboxradiowrapper:nth-last-of-type(n + 2),
   .#{$ns}-styledcheckboxradio:nth-last-of-type(n + 2) {
     border-bottom: $xui-border-control;
@@ -75,11 +79,21 @@
 
 // Right-aligned input
 // ===================
+// This conditional reset of L40 (which itself is a conditional reset of L95)
+// is gross, but it’s a temporary fix for a group of inline reversed controls
+// that is not technically a `xui-checkboxradio-group`. This will be tidied up
+// in XUI-1426.
+.#{$ns}-styledcheckboxradiowrapper:first-child {
+  .#{$ns}-styledcheckboxradio-reversed .#{$ns}-styledcheckboxradio--label {
+    @include xui-margin-left(0);
+  }
+}
+
 .#{$ns}-styledcheckboxradio-reversed {
   flex-direction: row-reverse;
   justify-content: space-between;
   .#{$ns}-styledcheckboxradio--label {
-    margin-left: 0;
+    @include xui-margin-left($xui-s-xsmall);
   }
 }
 
@@ -89,7 +103,6 @@
   display: inline-block; // Inline inputs
   user-select: none;
   vertical-align: top;
-
   .#{$ns}-styledcheckboxradio {
     display: flex;
     max-width: 100%;
